--- a/src/main/resources/templates/jk/seller/mypage/pwinfocheck.html
+++ b/src/main/resources/templates/jk/seller/mypage/pwinfocheck.html
@@ -34,9 +34,9 @@
         <th:block th:replace="~{/jk/seller/navbar :: navbarHTML}"></th:block>
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
-            <main style="padding: 6.5%; background-color: #ffffff;">
+            <main style="padding: 9.5%; background-color: #ffffff;">
                 <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
-                    <div class="container mt-5">
+                    <div class="container mt-6 mb-6">
                         <h1 class="mb-4"><strong>본인확인</strong></h1>
 
                         <th:block th:object="${seller}">
