--- a/src/main/resources/templates/ikh/seller/delivery/search.html
+++ b/src/main/resources/templates/ikh/seller/delivery/search.html
@@ -40,78 +40,120 @@
             <main>
                 <div style="padding-left: 15px; padding-top: 30px; padding-right: 15px;">
                     <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->                                        
-                        <h3>배송 입니다.</h3>
+                        <h2 th:text="${companyName} + ' 님의 배송현황입니다.'" style="padding-bottom : 15px;"></h2>
                         <div>
+                            <div class="row" style ="border: 2px solid rgb(229, 229, 229); margin-bottom: 15px; text-align: center; background-color: rgb(241 246 252);">
+                                <div class="col-1">                                        
+                                </div>
+                                    <div class="col-10" style="display: inline-block; padding-top: 3px; padding-bottom: 5px;">
+                                        <div class="col-2" style="display: inline-block;">
+                                            <div style="display: inline;" class="wrapper">
+                                                <img th:src="@{/images/ikh/all.png}" style="width: 50px; height: 50px;"/>
+                                                <div class="text-wrapper" style="display:inline-block; position: relative; top : 10px;">
+                                                    <div>전체현황</div>
+                                                    <div class="accent">
+                                                        <span th:text="${total}"></span>
+                                                        건
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-2" style="display: inline-block;">
+                                            <div style="display:inline;" class="wrapper">
+                                                <img th:src="@{/images/ikh/befored.png}" style="width: 50px; height: 50px;"/>
+                                                <div class="text-wrapper" style="display:inline-block; position: relative; top : 10px;">
+                                                    <div>배송전</div>
+                                                    <div class="accent">
+                                                        <span th:text="${one}"></span>                                                    
+                                                        건
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
 
-                            <div class="row" style ="border: 2px solid rgb(229, 229, 229); margin-bottom: 15px;">                            
-                                    <div class="col-2">
-                                        여백
+                                        <div class="col-2" style="display: inline-block;">
+                                            <div style="display:inline;" class="wrapper">
+                                                <img th:src="@{/images/ikh/prepare.png}" style="width: 50px; height: 50px;"/>
+                                                <div class="text-wrapper" style="display:inline-block; position: relative; top : 10px;">
+                                                    <div>배송준비중</div>
+                                                    <div class="accent">
+                                                        <span th:text="${two}"></span>
+                                                        건
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-2" style="display: inline-block;">
+                                            <div style="display:inline;" class="wrapper">
+                                                <img th:src="@{/images/ikh/delivery.png}" style="width: 50px; height: 50px;"/>
+                                                <div class="text-wrapper" style="display:inline-block; position: relative; top : 10px;">
+                                                    <div>배송중</div>
+                                                    <div class="accent">
+                                                        <span th:text="${three}"></span>
+                                                        건
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-2" style="display: inline-block;">
+                                            <div style="display:inline;" class="wrapper">
+                                                <img th:src="@{/images/ikh/completed.png}" style="width: 50px; height: 50px;"/>
+                                                <div class="text-wrapper" style="display:inline-block; position: relative; top : 10px;">
+                                                    <div>배송완료</div>
+                                                    <div class="accent">
+                                                        <span th:text="${four}"></span>
+                                                        건
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>                                        
                                     </div>
-                                    <div class="col-sm" style="display: inline-block;">
-                                        전체<p th:text="${total}" style="display: inline-block;"></p>
-                                        배송전<p th:text="${one}" style="display: inline-block;"></p>
-                                        배송준비중<p th:text="${two}" style="display: inline-block;"></p>
-                                        배송중<p th:text="${three}" style="display: inline-block;"></p>
-                                        배송완료<p th:text="${four}" style="display: inline-block;"></p>
-                                    </div>
-                                    <div class ="col-2">
-                                        여백
-                                    </div>
+                                <div class ="col-1">                                        
+                                </div>
                             </div>
 
                             <form th:action="@{/seller/delivery/search.do}" method="get" th:object="${dvs}">
-                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); background-color: rgb(243,245,247);">
-                                    <div style="display: inline-block;">
-                                        검색어<hr/>
-                                        물품코드 <input type="number" th:field="${dvs.itemcode}" name="itemcode" placeholder="물품코드 입력" />
-                                        물품이름 <input type="text" th:field="${dvs.itemname}" name="itemname" placeholder="물품이름 입력" />
-                                        주소 <input type="text" th:field="${dvs.address}" name="address" placeholder="주소 입력" />
-                                        공구주문번호 <input type="number" th:field="${dvs.purchaseno}" name="purchaseno" placeholder="공구주문번호 입력" />
+                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); background-color: rgb(241 246 252);">
+                                    <div style="display: inline-block; margin: 10px 5px 10px 5px;">
+                                        <div class="col-2" style="display: inline-block;">
+                                            검색어
+                                        </div>
+                                        <div style="display: inline-block;">
+                                            물품코드  <input type="number" th:field="${dvs.itemcode}" name="itemcode" placeholder="물품코드 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
+                                            물품이름  <input type="text" th:field="${dvs.itemname}" name="itemname" placeholder="물품이름 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
+                                            주소  <input type="text" th:field="${dvs.address}" name="address" placeholder="주소 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
+                                            공구주문번호  <input type="number" th:field="${dvs.purchaseno}" name="purchaseno" placeholder="공구주문번호 입력" />
+                                        </div>
                                     </div>
                                 </div>
 
-                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">                                                                        
-                                    배송상태<hr/>
-                                    <div style="display: inline-block;">
-                                        <input type="radio" th:each="obj : ${statuslist}" th:field="${dvs.status}" name="status" th:text="${obj.status}" th:value="${obj.no}"/>
+                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(241 246 252); ">
+                                    <div style="display: inline-block; margin: 10px 5px 10px 5px;">
+                                        <div class="col-2" style="display: inline-block;">
+                                            배송상태
+                                        </div>                                        
+                                        <input class="form-check-input" type="radio" th:each="obj : ${statuslist}" th:field="${dvs.status}" name="status" th:text="${obj.status} + '&nbsp;&nbsp;&nbsp;&nbsp;'" th:value="${obj.no}"/>                                        
+                                        
                                     </div>
                                 </div>
 
-                                <!-- <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">
-                                    <form th:action="@{/seller/delivery/search.do}" method="get">
-                                        <select id="firstselect" name="lname" th:onchange="first()">
-                                            <option>대분류</option>
-                                            <option>ㅡㅡㅡㅡㅡㅡ</option>
-                                            <option th:each="obj : ${llist}" th:value ="${obj.code.longValue()}" th:text="${obj.name}"></option>
-                                        </select>                                    
-                                    
-                                        <select id="secondselect" name="mname" onchange="second()">
-                                            <option>중분류</option>
-                                            <option>ㅡㅡㅡㅡㅡㅡ</option>
-                                            <option th:each="obj : ${mlist}" th:value ="${obj.code.longValue()}" th:text="${obj.name}"></option>
-                                        </select>           
-                                    
-                                        <select id="thirdselect" name="sname" onchange="third()">
-                                            <option>소분류</option>
-                                            <option>ㅡㅡㅡㅡㅡㅡ</option>
-                                            <option th:each="obj : ${slist}" th:value ="${obj.code.longValue()}" th:text="${obj.name}"></option>
-                                        </select>
-                                    </form>
-                                </div> -->
-
-                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">                                    
-                                    <h6 style="display: inline;">기간</h6>
-                                    <div style="display: inline-block;">
-                                    <!-- script -->
-                                    <input type="date" id="fd" th:min="${sdate}" th:field="${dvs.firstdate}" name="firstdate" th:onchange="firstdatechange()"/>
-                                    &nbsp;~&nbsp;
-                                    <input type="date" id="sd" min="" th:max="${today}" th:field="${dvs.seconddate}" name="seconddate" th:onchange="seconddatechange()"/>                                   
+                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(241 246 252);">                                    
+                                    <div style="display: inline-block; margin: 10px 5px 10px 5px;">
+                                        <div class="col-2" style="display: inline-block;">
+                                            기간
+                                        </div>                                        
+                                        <input type="date" id="fd" th:min="${sdate}" th:field="${dvs.firstdate}" name="firstdate" th:onchange="firstdatechange()"/>
+                                            &nbsp;~&nbsp;
+                                        <input type="date" id="sd" min="" th:max="${today}" th:field="${dvs.seconddate}" name="seconddate" th:onchange="seconddatechange()"/>                                   
                                     </div>
                                 </div>                                
 
-                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">
-                                    <div style="display: inline-block; text-align: center;" >
-                                        <a th:href="@{/seller/delivery/search.do}"><button type="button" class="btn btn-outline-dark" >초기화</button></a>
+                                <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(241 246 252);">
+                                    <div style="display: inline-block; text-align: center; margin: 5px 10px 5px 10px;" >
+                                        <a th:href="@{/seller/delivery/search.do}"><button type="button" class="btn btn-outline-dark">초기화</button></a>                                        
                                         <button type="submit" class="btn btn-outline-dark">검색</button>
                                     </div>
                                 </div>
@@ -123,7 +165,7 @@
                                     <div class="card mb-4">
                                         <div class="card-header">
                                             <i class="fas fa-table me-1"></i>
-                                            테이블 예제
+                                            배송현황
                                         </div>
                                         <div class="card-body">
                                             <table id="datatablesSimple">
