--- a/src/main/resources/templates/gr/customer/myaddress.html
+++ b/src/main/resources/templates/gr/customer/myaddress.html
@@ -609,7 +609,7 @@
                             extraAddr = ' (' + extraAddr + ')';
                         }
                         // 조합된 참고항목을 해당 필드에 넣는다.
-                        document.getElementById("sample6_extraAddress").value = extraAddr;
+                        document.("sample6_extraAddress").value = extraAddr;
                     
                     } else {
                         document.getElementById("sample6_extraAddress").value = '';
