--- a/src/main/resources/templates/jk/seller/home.html
+++ b/src/main/resources/templates/jk/seller/home.html
@@ -52,7 +52,6 @@
                         <div class="col-ml-12" id="guideCardBody" hidden>
                             <div class="card mb-4">
                                 <div class="card-body">
-
                                     <!-- 오늘 하루 그만보기 버튼 -->
                                     <a href="#" id="hideGuideBtn" class="float-end">오늘하루 그만보기 <i
                                             class="fas fa-xmark"></i></a>
@@ -76,8 +75,8 @@
 
 
                                     <!-- 모달 1 -->
-                                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modal1Label"
-                                        aria-hidden="true">
+                                    <div class="modal fade" id="modal1" tabindex="-1" data-bs-backdrop="static"
+                                        aria-labelledby="modal1Label" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
@@ -86,7 +85,22 @@
                                                         aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>모달 1 내용</p>
+                                                    <p style="font-weight: 800;"><strong>소분소분에 오신 판매자 여러분을 진심으로
+                                                            환영합니다!</strong></p>
+                                                    <img th:src="@{/images/jk/guide2.png}" alt="홈화면 사진 (판매전)"
+                                                        class="my-3"
+                                                        style="width: 100%; padding-bottom: 20px; border: 1px solid #082842; border-radius: 20px;">
+                                                    <p class="mt-3 mb-0"> 처음 회원가입을 하신 판매자분들은 먼저 상품 등록을 진행해주세요.</p>
+                                                    <p class="mb-1">상품 등록은 화면에 보이는 <strong style="font-weight: 800;">「상품
+                                                            등록하기」</strong> 버튼을 사용하여 등록할 수 있습니다. </p>
+                                                    <br>
+                                                    <hr>
+                                                    <img th:src="@{/images/jk/guide3.png}" alt="홈화면 사진 (판매후)"
+                                                        class="my-3"
+                                                        style="width: 100%; padding-bottom: 20px; border: 1px solid #082842; border-radius: 20px;">
+                                                    <p class="my-3">상품 판매가 완료된 이후에는 위와 같이 바탕화면에서도 판매완료된 물품들의 정보를 확인할 수
+                                                        있습니다.</p>
+
                                                 </div>
                                                 <div class="modal-footer">
 
@@ -98,8 +112,8 @@
                                     </div>
 
                                     <!-- 모달 2 -->
-                                    <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="modal2Label"
-                                        aria-hidden="true">
+                                    <div class="modal fade" id="modal2" tabindex="-1" data-bs-backdrop="static"
+                                        aria-labelledby="modal2Label" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
@@ -108,7 +122,12 @@
                                                         aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>모달 2 내용</p>
+                                                    <div style="text-align: center; ">
+                                                    <img th:src="@{/images/jk/guide1.png}" alt="메뉴바 사진"
+                                                        style="width: 50%; padding-bottom: 20px; border: 1px solid #082842; border-radius: 20px;">
+                                                    </div>
+                                                        <p class="mt-3 mb-1">좌측의 메뉴바를 통해 내 정보를 관리하거나 물품을 관리할 수 있고,</p>
+                                                    <p>주문과 배송또한 추적 및 관리가 가능합니다.</p>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button"
@@ -121,8 +140,8 @@
                                     </div>
 
                                     <!-- 모달 3 -->
-                                    <div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="modal3Label"
-                                        aria-hidden="true">
+                                    <div class="modal fade" id="modal3" tabindex="-1" data-bs-backdrop="static"
+                                        aria-labelledby="modal3Label" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
@@ -220,7 +239,8 @@
                                         <div class="ms-3" style="position: relative; top: 35px;">
                                             <!-- 데이터가 null이 아닌 경우에 처리할 내용 -->
                                             <p id="divContnent" name="bestSeller" th:text="${itemName}"
-                                                style="margin: 20px; font-size: 24px; font-weight: 900; color: #082842;"></p>
+                                                style="margin: 20px; font-size: 24px; font-weight: 900; color: #082842;">
+                                            </p>
                                             <input id="modelValue" th:value="${itemName}" hidden></input>
                                             <p id="divContnent" th:text=" '지금까지 총 ' +  ${soldCount} +'개가 판매완료 됐네요!'"
                                                 style="margin: 20px;"></p>
