--- a/src/main/resources/templates/ikh/seller/delivery/search.html
+++ b/src/main/resources/templates/ikh/seller/delivery/search.html
@@ -122,10 +122,10 @@
                                             검색어
                                         </div>
                                         <div style="display: inline-block;">
-                                            물품코드  <input type="number" th:field="${dvs.itemcode}" name="itemcode" placeholder="물품코드 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
-                                            물품이름  <input type="text" th:field="${dvs.itemname}" name="itemname" placeholder="물품이름 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
-                                            주소  <input type="text" th:field="${dvs.address}" name="address" placeholder="주소 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
-                                            공구주문번호  <input type="number" th:field="${dvs.purchaseno}" name="purchaseno" placeholder="공구주문번호 입력" />
+                                            물품코드&nbsp;&nbsp;<input type="number" th:field="${dvs.itemcode}" name="itemcode" placeholder="물품코드 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
+                                            물품이름&nbsp;&nbsp;<input type="text" th:field="${dvs.itemname}" name="itemname" placeholder="물품이름 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
+                                            주소&nbsp;&nbsp;<input type="text" th:field="${dvs.address}" name="address" placeholder="주소 입력" />&nbsp;&nbsp;&nbsp;&nbsp;
+                                            공구주문번호&nbsp;&nbsp;<input type="number" th:field="${dvs.purchaseno}" name="purchaseno" placeholder="공구주문번호 입력" />
                                         </div>
                                     </div>
                                 </div>
