--- a/src/main/resources/templates/se/customer/home.html
+++ b/src/main/resources/templates/se/customer/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> --><!-- 반응형 제거 -->
     <title>새로운 1인가구 공구문화 - 소분소분</title>
     <link rel="icon" th:href="@{/images/se/sobun.ico}">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -16,7 +16,19 @@
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <!-- Link Swiper's CSS 배너 슬라이드 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
     <style>
+        /* 반응형 제거 */
+        .container {
+            width: 1300px;
+        }
+        
+        .container-fluid {
+            width: 1910px;
+            /* 반응형 제거 */
+        }
 
         .homeMain {
             max-width: 1300px;
@@ -59,6 +71,7 @@
 
         /* 스크롤해도 따라다니는 버튼 만들기 */
         #totalBtn {
+            z-index: 9500;
             position:fixed; 
             width:300px;
             display:inline-block;
@@ -108,6 +121,67 @@
             padding-left: 5px;
         }
 
+        /* 배너 슬라이드 */
+        .swiper {
+            margin-top: 80px;
+            margin-bottom: 190px;
+            position: relative;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .swiper-slide {
+            width: 60%;
+        }
+
+        /* .swiper-slide:nth-child(2n) {
+            width: 40%;
+        }
+
+        .swiper-slide:nth-child(3n) {
+            width: 20%;
+        } */
+
+        .swiper-pagination-bullet-active {
+            background-color: #6D9275;
+        }
+
+        /* 배너 커버 */
+        .bannerCover {
+            position: absolute;
+            z-index: 9000;
+            top: 181px;
+            width: 370px;
+            height: 750px;
+            background-color: rgba(255, 255, 255, 0.85);
+            /* background-color: #204710; */
+        }
+
+        .bannerCover2 {
+            position: absolute;
+            z-index: 9000;
+            top: 181px;
+            right: 0px;
+            width: 370px;
+            height: 750px;
+            background-color: rgba(255, 255, 255, 0.85);
+            /* background-color: #204710; */
+        }
+
     </style>
 
 </head>
@@ -119,9 +193,20 @@
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
     <div style="padding-bottom: 400px;">
 
-        <div class="container-fluid d-flex justify-content-center" >
-            <img src="http://via.placeholder.com/1400x540" alt=""> <!-- 배너이미지 -->
+        <!-- Swiper 배너 슬라이드 -->
+        <div class="container-fluid">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+            <div class="swiper-slide"><img th:src="@{/images/se/homeBanner1.png}"></div>
+            <div class="swiper-slide"><img th:src="@{/images/se/homeBanner2.png}"></div>
+            <div class="swiper-slide"><img th:src="@{/images/se/homeBanner3.png}"></div>
+            </div>
+            <div class="swiper-pagination"></div>
         </div>
+        <div class="bannerCover"></div>
+        <div class="bannerCover2"></div>
+        </div>
+
             
         <!-- 비로그인 -->
         <th:block th:if="${user} == null">
@@ -140,26 +225,16 @@
                     </div>
                 </th:block>
 
-                <!-- <div class="row mb-5"> -->
-                    <th:block th:if="${idx.index != 0}" th:each=" deadOne, idx : ${deadList} ">
-                        <div class="topList">
-                            <a th:href="@{/customer/item/selectone.do(itemno=${deadOne.itemno})}">
-                                <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}"  style="width: 310px; height: 350px;">
-                                <div th:text="${deadOne.name}"></div>
-                                <div th:text="${#numbers.formatInteger(deadOne.price, 3, 'COMMA') + '원'}"></div>
-                                <label class="card-text dday2 shadow-sm" th:text="|D - ${deadOne.dday}|"></label>
-                            </a>
-                        </div>
-                        <!-- <div class="col card p-0 shadow-sm m-2">
-                            <a th:href="@{/customer/item/selectone.do(itemno=${deadOne.itemno})}"><img class="card-img-top" th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="width: 307px; height: 307px;"></a>
-                            <div class="card-body p-3">
-                                <div class="card-text" th:text="${deadOne.name}"></div>
-                                <div class="card-text" th:text="${#numbers.formatInteger(deadOne.price, 3, 'COMMA') + '원'}"></div>
-                                <label class="card-text dday2 shadow-sm" th:text="|D - ${deadOne.dday}|"></label>
-                            </div>
-                        </div> -->
-                    </th:block>
-                <!-- </div> -->
+                <th:block th:if="${idx.index != 0}" th:each=" deadOne, idx : ${deadList} ">
+                    <div class="topList">
+                        <a th:href="@{/customer/item/selectone.do(itemno=${deadOne.itemno})}">
+                            <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}"  style="width: 310px; height: 350px;">
+                            <div th:text="${deadOne.name}"></div>
+                            <div th:text="${#numbers.formatInteger(deadOne.price, 3, 'COMMA') + '원'}"></div>
+                            <label class="card-text dday2 shadow-sm" th:text="|D - ${deadOne.dday}|"></label>
+                        </a>
+                    </div>
+                </th:block>
                 
                 <br><br><br>
 
@@ -203,24 +278,15 @@
                     </div>
                 </th:block>
 
-                <!-- <div class="row mb-5"> -->
-                    <th:block th:if="${idx.index != 0}" th:each=" aroundOne, idx : ${aroundList} ">
-                        <div class="topList">
-                            <a th:href="@{/customer/item/selectone.do(itemno=${aroundOne.itemno})}">
-                                <img th:src="@{/customer/seimage(itemno=${aroundOne.itemno})}"  style="width: 310px; height: 350px;">
-                                <div th:text="${aroundOne.name}"></div>
-                                <div th:text="${#numbers.formatInteger(aroundOne.price, 3, 'COMMA') + '원'}"></div>
-                            </a>
-                        </div>
-                        <!-- <div class="col-sm-3 card p-0 shadow-sm m-2">
-                            <a th:href="@{/customer/item/selectone.do(itemno=${aroundOne.itemno})}"><img class="card-img-top" th:src="@{/customer/seimage(itemno=${aroundOne.itemno})}" ></a>
-                            <div class="card-body p-3">
-                                <div class="card-text" th:text="${aroundOne.name}"></div>
-                                <div class="card-text" th:text="${#numbers.formatInteger(aroundOne.price, 3, 'COMMA') + '원'}"></div>
-                            </div>
-                        </div> -->
-                    </th:block>
-                <!-- </div> -->
+                <th:block th:if="${idx.index != 0}" th:each=" aroundOne, idx : ${aroundList} ">
+                    <div class="topList">
+                        <a th:href="@{/customer/item/selectone.do(itemno=${aroundOne.itemno})}">
+                            <img th:src="@{/customer/seimage(itemno=${aroundOne.itemno})}"  style="width: 310px; height: 350px;">
+                            <div th:text="${aroundOne.name}"></div>
+                            <div th:text="${#numbers.formatInteger(aroundOne.price, 3, 'COMMA') + '원'}"></div>
+                        </a>
+                    </div>
+                </th:block>
                 
                 <br><br><br>
 
@@ -259,7 +325,26 @@
     <!-- footer -->
     <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
 
+    <!-- Swiper JS 배너 슬라이드 -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
     <script>
+        // 배너 슬라이드 ----------------------------------------------------------------------------------
+        var swiper = new Swiper(".mySwiper", {
+            autoplay: {
+                delay: 5000,
+                disableOnInteraction: false,
+            },
+            slidesPerView: "auto",
+            centeredSlides: true,
+            spaceBetween: 30,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+        });
+        // 배너 슬라이드
+
         // 마우스 오버 ----------------------------------------------------------------------------------
         const mouseOverAction = (idx) => {
             const itemCover1 = document.getElementsByName('itemCover1')[idx];
