6월5일 합친 후 오류 점검 (+ input 화살표 감춤)

--- a/src/main/resources/static/css/ikh/seller.css
+++ b/src/main/resources/static/css/ikh/seller.css
@@ -389,3 +389,11 @@ ul {
 
     background-color: rgba(0, 0, 0, 0.4);
   }  
+
+  /* input up down 버튼 삭제 */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
