--- a/src/main/resources/templates/jk/seller/home.html
+++ b/src/main/resources/templates/jk/seller/home.html
@@ -56,21 +56,14 @@
                                     <a href="#" id="hideGuideBtn" class="float-end">오늘하루 그만보기 <i
                                             class="fas fa-xmark"></i></a>
                                     <div class="p-2">
-                                        <!-- <img class="mx-3" th:src="@{/images/jk/info.png}"
-                                            style=" float: left; width: 5vh;" alt="정보아이콘" /> -->
                                         <lord-icon src="https://cdn.lordicon.com/kipaqhoz.json" trigger="morph"
                                             colors="primary:#121331" style="float: left; width:70px;height:70px">
                                         </lord-icon>
-                                        <!-- <img src="../images/jk/box.png" alt="상자img"
-                                            style="float: right; position: relative; bottom: 40px;"> -->
-                                        <div class="ms-3" style="position: relative;">
-                                            <!-- 사이트 이용 설명을 위한 버튼 -->
-                                            <p
-                                                style="margin: 5px; margin-left: 50px;  font-weight: 600; font-size: 20px; position: relative; top: 10px; left: 5px;">
-                                                도움말이 필요하시다면 <a href="#" data-bs-toggle="modal" data-bs-target="#modal1"
-                                                    style="font-size: 20px; color: rgb(0, 60, 255); font-weight: 900;">여기</a>를
-                                                눌러주세요!</p>
-                                        </div>
+                                        <!-- 사이트 이용 설명을 위한 버튼 -->
+                                        <p style="margin: 5px;  font-weight: 600; font-size: 20px; position: relative; top: 10px; left: 5px;">
+                                            도움말이 필요하시다면 <a href="#" data-bs-toggle="modal" data-bs-target="#modal1"
+                                                style="font-size: 20px; color: rgb(0, 60, 255); font-weight: 900;">여기</a>를
+                                            눌러주세요!</p>
                                     </div>
 
 
@@ -123,10 +116,10 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <div style="text-align: center; ">
-                                                    <img th:src="@{/images/jk/guide1.png}" alt="메뉴바 사진"
-                                                        style="width: 50%; padding-bottom: 20px; border: 1px solid #082842; border-radius: 20px;">
+                                                        <img th:src="@{/images/jk/guide1.png}" alt="메뉴바 사진"
+                                                            style="width: 50%; padding-bottom: 20px; border: 1px solid #082842; border-radius: 20px;">
                                                     </div>
-                                                        <p class="mt-3 mb-1">좌측의 메뉴바를 통해 내 정보를 관리하거나 물품을 관리할 수 있고,</p>
+                                                    <p class="mt-3 mb-1">좌측의 메뉴바를 통해 내 정보를 관리하거나 물품을 관리할 수 있고,</p>
                                                     <p>주문과 배송또한 추적 및 관리가 가능합니다.</p>
                                                 </div>
                                                 <div class="modal-footer">
