--- a/src/main/resources/templates/gr/customer/myorderlist.html
+++ b/src/main/resources/templates/gr/customer/myorderlist.html
@@ -503,7 +503,7 @@
                                     <div class="text">
                                         <div class="title" th:text="${obj.name}"></div>
                                         <div class="details">
-                                            <div class="detail" th:text="|옵션 : ${obj.storename}, |"></div>
+                                            <div class="detail" th:text="|옵션 : ${obj.sname}, |"></div>
                                             <div class="detail" th:text="|${obj.participant}인 공구|"></div>
                                         </div>
                                     </div>
